# omnipro-expert

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  render.yaml  tsconfig.json  tsconfig.tsbuildinfo
data/products/vulcan-omnipro-220/: graph.json  video_moments.json
data/products/vulcan-omnipro-220/pages/: owner-manual-01.json  owner-manual-02.json  owner-manual-03.json  owner-manual-04.json  owner-manual-05.json  owner-manual-06.json  owner-manual-07.json  owner-manual-08.json  owner-manual-09.json  owner-manual-10.json  owner-manual-11.json  owner-manual-12.json  owner-manual-13.json  owner-manual-14.json  owner-manual-15.json  (+36 more)
evals/: questions.json
pipeline/: README.md  pyproject.toml
pipeline/omnipro_pipeline/: build_graph.py  crop_all.py  extract.py  ingest_video.py  llm.py  render.py  schema.py  verify_landmarks.py
pipeline/tests/: test_build_graph.py  test_extract.py  test_render.py  test_scaffold.py  test_schema.py
scripts/: eval.ts  harness.ts  mcp-server.ts  smoke.ts
src/agent/: artifact.ts  run.ts  system-prompt.ts  tools.ts  widget-schemas.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ArtifactFrame.tsx  Chat.tsx  GraphView.tsx  ManualBrowser.tsx  Message.tsx  PageModal.tsx
src/components/widgets/: DutyCycleCalculator.tsx  PolarityDiagram.tsx  ProcessSelector.tsx  SettingsConfigurator.tsx  TroubleshootingTree.tsx  index.tsx
src/lib/: duty-cycle.ts  graph.ts  rate-limit.ts  speech.ts  types.ts
src/lib/__tests__/: artifact.test.ts  graph.test.ts  rate-limit.test.ts  smoke.test.ts  widgets.test.ts
(+2 files in other folders)
