[project]
name = "omnipro-pipeline"
version = "0.1.0"
description = "Offline extraction pipeline: OmniPro 220 manuals -> knowledge graph"
requires-python = ">=3.12"
dependencies = [
  "pymupdf>=1.24",
  "anthropic>=0.40",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "openai>=2.45.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnipro_pipeline"]
